[gd_scene load_steps=8 format=3 uid="uid://ou27wkci6ypv"]

[ext_resource type="Script" path="res://ui/title_screen.gd" id="1_a7b4r"]
[ext_resource type="PackedScene" uid="uid://bcai38xe752jx" path="res://ui/logo.tscn" id="1_ernnk"]
[ext_resource type="FontFile" uid="uid://dv3201q5d4liu" path="res://ui/fonts/PixelMecha.ttf" id="2_3l5do"]
[ext_resource type="Texture2D" uid="uid://c2ppcos3ulp71" path="res://ui/Logo.png" id="3_hg5wg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5x8s3"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.133333, 0.545098, 0.133333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqxhy"]
bg_color = Color(1, 1, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 0, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6uy35"]
bg_color = Color(0.996078, 0.682353, 0.203922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0941176, 0.0784314, 0.145098, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="TitleScreen" type="Control"]
custom_minimum_size = Vector2(740, 400)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7b4r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5x8s3")

[node name="Logo" parent="Panel" instance=ExtResource("1_ernnk")]
custom_minimum_size = Vector2(740, 275)
layout_mode = 1
anchors_preset = 10
anchor_left = 0.0
anchor_right = 1.0
offset_left = 174.0
offset_right = -205.0
offset_bottom = 295.0
texture = ExtResource("3_hg5wg")
expand_mode = 0

[node name="GridContainer" type="GridContainer" parent="Panel"]
custom_minimum_size = Vector2(110, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 13.0
offset_right = 55.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 15

[node name="PlayGameButton" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.682353, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_3l5do")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/hover = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6uy35")
text = "Play Game"

[node name="ContinueButton" type="Button" parent="Panel/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.682353, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_3l5do")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/hover = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6uy35")
text = "Continue"

[node name="SettingsButton" type="Button" parent="Panel/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.682353, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_3l5do")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/hover = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6uy35")
text = "Continue"

[node name="ExitGameButton" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.682353, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_3l5do")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/hover = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6uy35")
text = "Exit Game"

[node name="CreditsGameButton" type="Button" parent="Panel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_hover_color = Color(0.996078, 0.682353, 0.203922, 1)
theme_override_fonts/font = ExtResource("2_3l5do")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/hover = SubResource("StyleBoxFlat_cqxhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6uy35")
text = "Credits"

[connection signal="pressed" from="Panel/GridContainer/PlayGameButton" to="." method="_on_play_game_button_pressed"]
[connection signal="pressed" from="Panel/GridContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Panel/GridContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/GridContainer/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
[connection signal="pressed" from="Panel/GridContainer/CreditsGameButton" to="." method="_on_credits_game_button_pressed"]
